--- a/receipts/templates/receipts/list.html
+++ b/receipts/templates/receipts/list.html
@@ -22,7 +22,7 @@
                 <td>{{ item.vendor }}</td>
                 <td>{{ item.total }}</td>
                 <td>{{ item.tax }}</td>
-                <td>{{ item.date|date:"n/j/y" }}</td>
+                <td>{{ item.date|date:"n/d/y" }}</td>
                 <td>{{ item.category.name }}</td>
                 <td>{{ item.account.name }}</td>
             {% endfor %}
