--- a/receipts/templates/base.html
+++ b/receipts/templates/base.html
@@ -12,7 +12,19 @@
             <ul>
                 {% if user.is_authenticated %}
                 <li>
-                        <a href="{% url 'logout' %}">Logout</a>
+                    <a href="{% url 'logout' %}">Logout</a>
+                </li>
+                <li>
+                    <a href="{% url 'category_list' %}">Category</a>
+                </li>
+                <li>
+                    <a href="{% url 'account_list' %}">Account</a>
+                </li>
+                <li>
+                    <a href="{% url 'create_category' %}">Create Category</a>
+                </li>
+                <li>
+                    <a href="{% url 'create_account' %}">Create Account</a>
                 </li>
                 {% endif %}
                 {% if not user.is_authenticated %}
